# python-port-in-scraper

./: .env.example  .gitignore  alembic.ini  fictive_number_sql.py  main.py  numbers.xlsx  pyproject.toml  query.py  read_csv.py  start.py  test_login.py  test_login2.py  test_virgin_alternative.py  testing.py
cellcom_scraper/: config.py
cellcom_scraper/application/: enums.py  processor.py  selectors.py
cellcom_scraper/application/builders/: __init__.py  chrome_driver_builder.py  edge_driver_builder.py  firefox_driver_builder.py
cellcom_scraper/application/commands/: update_fictive_number_config.py
cellcom_scraper/application/controllers/: __init__.py  base_controller.py  fast_act_controller.py  portin_controller.py  upgrade_and_dro_controller.py  upgrade_and_dto_controller.py  virgin_upgrade_and_dro_controller.py
cellcom_scraper/application/drivers/: default_automation_driver.py
cellcom_scraper/application/queries/: get_fictive_number_config.py
cellcom_scraper/application/scrapers/: scraper_controller.py
cellcom_scraper/application/strategies/: base_strategy.py
cellcom_scraper/domain/: enums.py
cellcom_scraper/domain/entities/: __init__.py  account.py  cqrs.py  navigator.py  process_queue_request.py  scraper.py
cellcom_scraper/domain/exceptions/: __init__.py  exceptions.py
cellcom_scraper/domain/interfaces/: automation_driver.py  automation_driver_builder.py  controller.py  repository.py  scraper.py  strategy.py  uow.py
cellcom_scraper/infrastructure/: repositories.py
settings/: navigator_default_configurations.py
(+32 files in other folders)
